SHOP-9: добавил регистрацию, авторизацию, и проверку ролей
