# app/Models/User.php
@@ -21,7 +21,8 @@ final class User extends Authenticatable implements MustVerifyEmail, HasMedia
     use HasApiTokens;
 
     protected $fillable = [
-        'name',
+        'first_name',
+        'last_name',
         'email',
         'password',
     ];
