# app/Versions/Private/Http/Resources/RoleResource.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Versions\Private\Http\Resources;
+
+use Illuminate\Http\Request;
+use Spatie\Permission\Models\Role;
+
+/* @mixin Role */
+class RoleResource
+{
+    public function toArray(Request $request): array
+    {
+        return [
+            'name' => $this->name,
+        ];
+    }
+}
