# routes/private.php
@@ -4,14 +4,23 @@ use App\Versions\Private\Http\Controllers\BasketController;
 use App\Versions\Private\Http\Controllers\CategoryController;
 use App\Versions\Private\Http\Controllers\ProductController;
 use App\Versions\Private\Http\Controllers\PurchaseController;
+use App\Versions\Private\Http\Controllers\RegisterController;
+use App\Versions\Private\Http\Controllers\ProfileController;
 use App\Versions\Private\Http\Controllers\UserMediaController;
 use Illuminate\Support\Facades\Route;
+use Laravel\Passport\Http\Controllers\AuthorizedAccessTokenController;
 
-Route::group(['prefix' => 'admin', 'as' => 'admin.'], function () {
+Route::group(['prefix' => 'admin', 'as' => 'admin.', 'middleware' => 'role:admin'], function () {
     require('admin.php');
 });
 
-Route::group(['prefix' => 'user', 'as' => 'user.', 'middleware' => 'auth:api'], function () {
+Route::post('register', RegisterController::class)
+    ->middleware('guest')
+    ->name('register');
+Route::post('/oauth/token/', [AuthorizedAccessTokenController::class, 'forUser'])->name('oauth.token');
+
+Route::group(['prefix' => 'user', 'as' => 'user.', 'middleware' => ['auth:api', 'role:user']], function () {
+    Route::get('', ProfileController::class)->name('profile');
     Route::group(['prefix' => 'media', 'as' => 'media.'], function () {
         Route::get('', [UserMediaController::class, 'index'])->name('index');
         Route::post('', [UserMediaController::class, 'store'])->name('store');
